--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -84,34 +84,37 @@
                         app:layout_constraintEnd_toEndOf="@+id/topView"
                         app:layout_constraintStart_toStartOf="@+id/topView"
                         app:layout_constraintTop_toTopOf="@+id/topView"
-                        tools:srcCompat="@drawable/pic3" />
+                        tools:srcCompat="@drawable/pic3"
+                        android:layout_marginBottom="25dp"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </LinearLayout>
             </LinearLayout>
 <!--klkl-->
-            <!--<View
+            <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="#DBD8D8"/>-->
+                android:background="#DBD8D8"/>
 
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="vertical"
                         tools:ignore="MissingConstraints">
+
+
 
                         <ScrollView
                             android:layout_width="match_parent"
@@ -133,6 +136,7 @@
                                     android:text="Brenda Nokuzola Fassie was born in Langa, Cape Town on the 3rd of November 1964[5] as the youngest of nine children. She was named after American singer Brenda Lee.[5] Her father died when she was two, and with the help of her mother, a pianist, she started earning money by singing for tourists."
                                     android:textAlignment="viewStart"
                                     android:textColor="#123"
+                                    android:paddingTop="10dp"
                                     android:textSize="@dimen/font_title_size"
                                     tools:ignore="MissingConstraints" />
                                 <TextView
@@ -151,7 +155,26 @@
                                     tools:ignore="MissingConstraints" />
                             </LinearLayout>
                         </ScrollView>
+
+
                     </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        tools:ignore="MissingConstraints"
+                        android:layout_weight="1.5">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Name :"
+                            android:textSize="18dp"
+                            android:paddingTop="10dp"/>
+
+
+                    </LinearLayout>
+
 
                 </LinearLayout>
 
