--- a/app/src/main/res/layout/singers_list_activity.xml
+++ b/app/src/main/res/layout/singers_list_activity.xml
@@ -39,7 +39,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Singers List"
+                    android:text="Celebraties List"
                     android:layout_marginTop="0dp"
                     android:layout_marginStart="10dp"
                     android:textColor="@color/white"
