fragment name changes

--- a/app/src/main/res/layout/singers_list_activity.xml
+++ b/app/src/main/res/layout/singers_list_activity.xml
@@ -10,48 +10,75 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
-            android:background="@color/md_blue"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/back_clist"
-                    android:layout_width="20dp"
-                    android:layout_height="15dp"
-                    android:layout_gravity="center"
-                    app:layout_constraintEnd_toEndOf="@+id/profileImageView"
-                    app:layout_constraintTop_toTopOf="@+id/profileImageView"
-                    app:srcCompat="@drawable/left_arrow_white" />
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="50dp"
+         android:orientation="vertical"
+         android:background="#ffffff">
+         <HorizontalScrollView
+             android:layout_width="match_parent"
+             android:layout_height="50dp"
+             android:scrollbars="horizontal"
+             android:layout_marginTop="5dp">
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="horizontal"
+                 android:gravity="center">
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Celebraties List"
-                    android:layout_marginTop="0dp"
-                    android:layout_marginStart="10dp"
-                    android:textColor="@color/white"
-                    android:textSize="24dp" />
+                 <Button
+                     android:layout_width="wrap_content"
+                     android:layout_height="35dp"
+                     android:text="Music"
+                     android:background="@drawable/shap"
+                     android:layout_margin="1dp"
+                     android:textColor="#ffffff"/>
+                 <Button
+                     android:layout_width="wrap_content"
+                     android:layout_height="35dp"
+                     android:text="Arts"
+                     android:background="@drawable/shap"
+                     android:layout_margin="1dp"
+                     android:textColor="#ffffff"/>
 
-            </LinearLayout>
+                 <Button
+                     android:layout_width="wrap_content"
+                     android:layout_height="35dp"
+                     android:text="Magic"
+                     android:background="@drawable/shap"
+                     android:layout_margin="1dp"
+                     android:textColor="#ffffff"/>
+                 <Button
+                     android:layout_width="wrap_content"
+                     android:layout_height="35dp"
+                     android:text="Magic"
+                     android:background="@drawable/shap"
+                     android:layout_margin="1dp"
+                     android:textColor="#ffffff"/>
+                 <Button
+                     android:layout_width="wrap_content"
+                     android:layout_height="35dp"
+                     android:text="Magic"
+                     android:background="@drawable/shap"
+                     android:layout_margin="1dp"
+                     android:textColor="#ffffff"/>
 
 
 
-        </androidx.appcompat.widget.Toolbar>
 
+
+             </LinearLayout>
+
+         </HorizontalScrollView>
+
+     </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
