--- a/app/src/main/res/drawable/btn_orange.xml
+++ b/app/src/main/res/drawable/btn_orange.xml
@@ -5,7 +5,7 @@
         <layer-list>
             <item android:bottom="4dp" android:left="4dp" android:right="4dp" android:top="4dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/orange_600" />
+                    <solid android:color="#043E77" />
                     <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
                     <size android:width="110dp" android:height="40dp" />
                 </shape>
@@ -18,7 +18,7 @@
         <layer-list>
             <item android:bottom="4dp" android:left="4dp" android:right="4dp" android:top="4dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/orange_600" />
+                    <solid android:color="#043E77" />
                     <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
                     <size android:width="110dp" android:height="40dp" />
                 </shape>
@@ -32,7 +32,7 @@
         <layer-list>
             <item android:bottom="4dp" android:left="4dp" android:right="4dp" android:top="4dp">
                 <shape android:shape="rectangle">
-                    <solid android:color="@color/orange_500" />
+                    <solid android:color="#043E77" />
                     <padding android:bottom="0dp" android:left="0dp" android:right="0dp" android:top="0dp" />
                     <size android:width="110dp" android:height="40dp" />
                 </shape>
